# toktop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: release-plz.yml
src/: app.rs  events.rs  fetch.rs  main.rs  models.rs  provider.rs
src/api/: anthropic.rs  openai.rs
src/ui/: banner.rs  colors.rs  content.rs  footer.rs  header.rs  menu.rs  mod.rs  options.rs  popup.rs  render.rs  summary.rs  utils.rs  view.rs
src/ui/content/: cost.rs  mod.rs  shared.rs  usage.rs
