[package]
name = "toktop"
version = "0.1.0"
edition = "2021"
description = "A terminal-based LLM cost and usage monitor"
license = "MIT"
repository = "https://github.com/htin1/toktop"
authors = ["htin1"]
keywords = ["llm", "monitor", "cost", "usage", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"

